--- a/app/src/main/res/layout/activity_setup_protect.xml
+++ b/app/src/main/res/layout/activity_setup_protect.xml
@@ -36,7 +36,7 @@
 
 	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/layout_password"
-		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+		style="?textInputOutlinedStyle"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="30dp"
@@ -78,7 +78,7 @@
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/button_cancel"
-		style="@style/Widget.Material3.Button.OutlinedButton"
+		style="?materialButtonOutlinedStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="@android:string/cancel"
@@ -87,7 +87,6 @@
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/button_next"
-		style="@style/Widget.Material3.Button.TonalButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:enabled="false"
