--- a/app/src/main/res/layout/item_empty_card.xml
+++ b/app/src/main/res/layout/item_empty_card.xml
@@ -46,7 +46,7 @@
 
 		<Button
 			android:id="@+id/button_retry"
-			style="@style/Widget.Material3.Button.TonalButton"
+			style="?materialButtonTonalStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/margin_small"
