--- a/app/src/main/res/layout/layout_page_info.xml
+++ b/app/src/main/res/layout/layout_page_info.xml
@@ -57,7 +57,7 @@
 			android:drawablePadding="12dp"
 			android:gravity="center_horizontal"
 			android:textAlignment="center"
-			android:textAppearance="@style/TextAppearance.AppCompat.Small"
+			android:textAppearance="?textAppearanceBodyMedium"
 			app:drawableTopCompat="@drawable/ic_error_large"
 			tools:text="@tools:sample/lorem[6]" />
 
