--- a/app/src/main/res/layout/activity_kitsu_auth.xml
+++ b/app/src/main/res/layout/activity_kitsu_auth.xml
@@ -41,7 +41,7 @@
 
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/layout_email"
-			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+			style="?textInputOutlinedStyle"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/textView_subtitle"
@@ -67,7 +67,7 @@
 
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/layout_password"
-			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+			style="?textInputOutlinedStyle"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/layout_email"
@@ -94,7 +94,7 @@
 
 		<Button
 			android:id="@+id/button_cancel"
-			style="@style/Widget.Material3.Button.OutlinedButton"
+			style="?materialButtonOutlinedStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_alignParentStart="true"
@@ -103,7 +103,6 @@
 
 		<Button
 			android:id="@+id/button_done"
-			style="@style/Widget.Material3.Button.TonalButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_alignParentEnd="true"
