--- a/app/src/main/res/layout/item_bookmark_large.xml
+++ b/app/src/main/res/layout/item_bookmark_large.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	style="@style/Widget.Kotatsu.CardView.Outlined"
+	style="?materialCardViewOutlinedStyle"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
