--- a/app/src/main/res/layout/item_error_state.xml
+++ b/app/src/main/res/layout/item_error_state.xml
@@ -23,7 +23,7 @@
 
 	<Button
 		android:id="@+id/button_retry"
-		style="@style/Widget.Material3.Button.TonalButton"
+		style="?materialButtonTonalStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
@@ -31,7 +31,7 @@
 
 	<Button
 		android:id="@+id/button_secondary"
-		style="@style/Widget.Material3.Button.TextButton"
+		style="?borderlessButtonStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:visibility="gone"
