--- a/app/src/main/res/layout/item_manga_alternative.xml
+++ b/app/src/main/res/layout/item_manga_alternative.xml
@@ -89,7 +89,7 @@
 
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/button_migrate"
-			style="@style/Widget.Material3.Button.TonalButton"
+			style="?materialButtonTonalStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="12dp"
