--- a/app/src/main/res/layout/item_search_suggestion_manga_grid.xml
+++ b/app/src/main/res/layout/item_search_suggestion_manga_grid.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	style="@style/Widget.Material3.CardView.Filled"
+	style="?materialCardViewFilledStyle"
 	android:layout_width="wrap_content"
 	android:layout_height="match_parent"
 	app:shapeAppearance="?shapeAppearanceCornerSmall"
