--- a/app/src/main/res/layout/item_tip.xml
+++ b/app/src/main/res/layout/item_tip.xml
@@ -40,7 +40,7 @@
 
 			<Button
 				android:id="@+id/button_close"
-				style="@style/Widget.Material3.Button.TextButton"
+				style="?borderlessButtonStyle"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_gravity="end"
