--- a/app/src/main/res/layout/sheet_reader_config.xml
+++ b/app/src/main/res/layout/sheet_reader_config.xml
@@ -29,34 +29,35 @@
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_save_page"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/save_page"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_save" />
 
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_bookmark"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/bookmark_add"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_bookmark" />
 
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_image_server"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
+				android:drawableEnd="@drawable/ic_expand_more_22px"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/image_server"
-				android:textAppearance="?attr/textAppearanceButton"
 				android:visibility="gone"
 				app:drawableStartCompat="@drawable/ic_images"
 				tools:visibility="visible" />
@@ -129,25 +130,26 @@
 			<com.google.android.material.materialswitch.MaterialSwitch
 				android:id="@+id/switch_double_reader"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/margin_normal"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/use_two_pages_landscape"
-				android:textAppearance="?attr/textAppearanceButton"
+				android:textAppearance="?textAppearanceListItem"
 				android:textColor="?colorOnSurfaceVariant"
 				app:drawableStartCompat="@drawable/ic_split_horizontal" />
 
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_screen_rotate"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/rotate_screen"
-				android:textAppearance="?attr/textAppearanceButton"
 				android:visibility="gone"
 				app:drawableStartCompat="@drawable/ic_screen_rotation"
 				tools:visibility="visible" />
@@ -155,14 +157,15 @@
 			<com.google.android.material.materialswitch.MaterialSwitch
 				android:id="@+id/switch_screen_lock_rotation"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
 				android:ellipsize="end"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:singleLine="true"
 				android:text="@string/lock_screen_rotation"
-				android:textAppearance="?attr/textAppearanceButton"
+				android:textAppearance="?textAppearanceListItem"
 				android:textColor="?colorOnSurfaceVariant"
 				android:visibility="gone"
 				app:drawableStartCompat="@drawable/ic_screen_rotation_lock"
@@ -171,34 +174,34 @@
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_scroll_timer"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/automatic_scroll"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_timer" />
 
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_color_filter"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/color_correction"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_appearance" />
 
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_settings"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/settings"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_settings" />
 
 		</LinearLayout>
