Improve mouse interaction

--- a/app/src/main/res/layout/item_categories_all.xml
+++ b/app/src/main/res/layout/item_categories_all.xml
@@ -54,7 +54,7 @@
 		app:layout_constraintVertical_chainStyle="packed"
 		tools:text="@tools:sample/lorem[1]" />
 
-	<ImageView
+	<ImageButton
 		android:id="@+id/imageView_visible"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
