--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -78,7 +78,7 @@
 		app:layout_constraintTop_toTopOf="@id/textView_subtitle"
 		app:srcCompat="@drawable/ic_eye_off" />
 
-	<ImageView
+	<ImageButton
 		android:id="@+id/imageView_edit"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -86,6 +86,7 @@
 		android:contentDescription="@string/edit"
 		android:padding="@dimen/margin_normal"
 		android:src="@drawable/ic_edit"
+		android:tooltipText="@string/edit"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toStartOf="@id/imageView_handle"
 		app:layout_constraintTop_toTopOf="parent" />
@@ -97,7 +98,9 @@
 		android:background="?selectableItemBackgroundBorderless"
 		android:contentDescription="@string/reorder"
 		android:padding="@dimen/margin_normal"
+		android:pointerIcon="grab"
 		android:src="@drawable/ic_reorder_handle"
+		android:tooltipText="@string/reorder"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
