--- a/app/src/main/res/layout/activity_override_edit.xml
+++ b/app/src/main/res/layout/activity_override_edit.xml
@@ -70,13 +70,9 @@
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_pick_file"
 				android:layout_width="0dp"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:layout_marginTop="4dp"
-				android:drawablePadding="?android:listPreferredItemPaddingStart"
-				android:paddingStart="?android:listPreferredItemPaddingStart"
-				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:text="@string/pick_custom_file"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_folder_file"
 				app:layout_constraintEnd_toEndOf="@id/textView_cover_title"
 				app:layout_constraintStart_toStartOf="@id/textView_cover_title"
@@ -85,12 +81,8 @@
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_pick_page"
 				android:layout_width="0dp"
-				android:layout_height="?android:listPreferredItemHeightSmall"
-				android:drawablePadding="?android:listPreferredItemPaddingStart"
-				android:paddingStart="?android:listPreferredItemPaddingStart"
-				android:paddingEnd="?android:listPreferredItemPaddingEnd"
+				android:layout_height="wrap_content"
 				android:text="@string/pick_manga_page"
-				android:textAppearance="?attr/textAppearanceButton"
 				android:visibility="gone"
 				app:drawableStartCompat="@drawable/ic_grid"
 				app:layout_constraintEnd_toEndOf="@id/textView_cover_title"
@@ -100,12 +92,8 @@
 			<org.koitharu.kotatsu.core.ui.widgets.ListItemTextView
 				android:id="@+id/button_reset_cover"
 				android:layout_width="0dp"
-				android:layout_height="?android:listPreferredItemHeightSmall"
-				android:drawablePadding="?android:listPreferredItemPaddingStart"
-				android:paddingStart="?android:listPreferredItemPaddingStart"
-				android:paddingEnd="?android:listPreferredItemPaddingEnd"
+				android:layout_height="wrap_content"
 				android:text="@string/use_default_cover"
-				android:textAppearance="?attr/textAppearanceButton"
 				app:drawableStartCompat="@drawable/ic_revert"
 				app:layout_constraintEnd_toEndOf="@id/textView_cover_title"
 				app:layout_constraintStart_toStartOf="@id/textView_cover_title"
@@ -120,6 +108,7 @@
 
 			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/layout_name"
+				style="?textInputOutlinedStyle"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_marginHorizontal="@dimen/screen_padding"
