--- a/app/src/main/res/layout/dialog_download.xml
+++ b/app/src/main/res/layout/dialog_download.xml
@@ -47,7 +47,7 @@
 				android:id="@+id/option_whole_branch"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:button="@drawable/ic_expand_more"
+				android:button="?expandCollapseIndicator"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
 				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
@@ -62,7 +62,7 @@
 				android:id="@+id/option_first_chapters"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:button="@drawable/ic_expand_more"
+				android:button="?expandCollapseIndicator"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
 				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
@@ -76,7 +76,7 @@
 				android:id="@+id/option_unread_chapters"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:button="@drawable/ic_expand_more"
+				android:button="?expandCollapseIndicator"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
 				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
@@ -105,33 +105,35 @@
 			<com.google.android.material.materialswitch.MaterialSwitch
 				android:id="@+id/switch_start"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/margin_small"
 				android:checked="true"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
 				android:ellipsize="end"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:singleLine="true"
 				android:text="@string/start_download"
-				android:textAppearance="?attr/textAppearanceButton"
+				android:textAppearance="?textAppearanceListItem"
 				android:textColor="?colorOnSurfaceVariant" />
 
 			<CheckedTextView
 				android:id="@+id/textView_more"
 				android:layout_width="match_parent"
-				android:layout_height="?android:listPreferredItemHeightSmall"
+				android:layout_height="wrap_content"
 				android:background="@drawable/list_selector"
 				android:checked="false"
-				android:drawableEnd="@drawable/ic_expand_collapse"
+				android:drawableEnd="?expandCollapseIndicator"
 				android:drawablePadding="?android:listPreferredItemPaddingStart"
 				android:ellipsize="end"
 				android:gravity="center_vertical"
+				android:minHeight="?android:listPreferredItemHeightSmall"
 				android:paddingStart="?android:listPreferredItemPaddingStart"
 				android:paddingEnd="?android:listPreferredItemPaddingEnd"
 				android:singleLine="true"
 				android:text="@string/more_options"
-				android:textAppearance="?attr/textAppearanceButton"
+				android:textAppearance="?textAppearanceListItem"
 				android:textColor="?colorOnSurfaceVariant" />
 
 			<TextView
