--- a/app/src/main/res/layout/item_checkable_new.xml
+++ b/app/src/main/res/layout/item_checkable_new.xml
@@ -3,9 +3,6 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="?android:listPreferredItemHeightSmall"
-	android:drawablePadding="?android:listPreferredItemPaddingStart"
-	android:paddingStart="?android:listPreferredItemPaddingStart"
-	android:paddingEnd="?android:listPreferredItemPaddingEnd"
-	android:textAppearance="?attr/textAppearanceButton"
+	android:layout_height="wrap_content"
+	android:textAppearance="?attr/textAppearanceListItem"
 	tools:text="@tools:sample/full_names" />
