--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+	<attr name="expandCollapseIndicator" format="reference" />
+
 	<attr name="sliderPreferenceStyle" />
 	<attr name="multiAutoCompleteTextViewPreferenceStyle" />
 	<attr name="autoCompleteTextViewPreferenceStyle" />
